--- a/config/crd/bases/apps.ppw.example.com_ppws.yaml
+++ b/config/crd/bases/apps.ppw.example.com_ppws.yaml
@@ -40,8 +40,11 @@ spec:
               description: Foo is an example field of Ppw. Edit Ppw_types.go to remove/update
               format: int32
               type: integer
+            storageClassName:
+              type: string
           required:
           - size
+          - storageClassName
           type: object
         status:
           description: PpwStatus defines the observed state of Ppw
