--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@dev
+        uses: actions/checkout@v2.3.4
         
       - name: Set up Go 
         uses: actions/setup-go@v2.1.3
