--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,10 +16,12 @@ jobs:
       - name: Set up Go 
         uses: actions/setup-go@v2.1.3
         with:
-          go-version: ^1.14
+          go-version: ^1.15
           
       - name: Building app
         run: |
-          echo $GOBIN
-          echo $GOPATH
+          go env
+          make generate
+          make manifests
+          make install
           
