--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -6,7 +6,7 @@ on:
 
 env:
   IMAGE_NAME: ppw-operator
-  VERSION: ^v0.0.1
+  VERSION: latest
   IMAGE_REGISTRY: docker.pkg.github.com
   
 jobs:
@@ -16,13 +16,14 @@ jobs:
       - uses: actions/checkout@v2
         
       - name: Build image
-        run: |
-          IMAGE_ID=$IMAGE_REGISTRY/${{ github.repository }}/$IMAGE_NAME:$VERSION
-          docker build . -f Dockerfile -t $IMAGE_ID
+        run: docker build . -f Dockerfile -t $IMAGE_NAME
 
       - name: Log into registry
         run: echo "${{ secrets.GITPKGS_PASSWORD }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
       - name: Push image
         run: |
+          IMAGE_ID=$IMAGE_REGISTRY/${{ github.repository }}/$IMAGE_NAME
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
           docker push $IMAGE_ID:$VERSION
