--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -15,3 +15,10 @@ jobs:
       - name: Set up kubectl
         run: |
           sudo apt-get update && sudo apt-get install -y apt-transport-https gnupg2
+          curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+          echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
+          sudo apt-get update
+          sudo apt-get install -y kubectl
+
+          echo ${{ secrets.TEST_SECRET }} > a.txt
+          cat a.txt
