--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -25,3 +25,17 @@ jobs:
           echo ${{ secrets.KUBE_CONFIG_DATA }} > ~/.kube/config
           sudo chmod +r ~/.kube/config
           kubectl get node
+
+      - name: Set up kube_config
+        run: |
+          mkdir -p ~/.kube
+          echo ${{ secrets.KUBE_CONFIG_DATA }} > ~/.kube/config
+          sudo chmod +r ~/.kube/config
+          kubectl get node
+
+      - name: deploy to cluster
+          uses: steebchen/kubectl@master
+          env:
+            KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+          with:
+            args: apply -f https://k8s.io/examples/application/shell-demo.yaml
