--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -19,10 +19,9 @@ jobs:
           echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee -a /etc/apt/sources.list.d/kubernetes.list
           sudo apt-get update && sudo apt-get install -y kubectl
 
-      - name: deploy to cluster
-        uses: steebchen/kubectl@master
+      - uses: actions-hub/kubectl@master
         env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
           args: apply -f https://k8s.io/examples/application/shell-demo.yaml
 
