--- a/.github/workflows/pre-build.yaml
+++ b/.github/workflows/pre-build.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Set env vars
         run: |
-          echo GOBIN=${GOPATH}/bin >> $GITHUB_ENV
+          export GOBIN=`go env GOPATH`/bin
 
       - name: Dependencies
         run: make all-dependencies
