--- a/.github/workflows/pre-build.yaml
+++ b/.github/workflows/pre-build.yaml
@@ -32,6 +32,8 @@ jobs:
         run: make all-dependencies
 
       - name: Generate deepcopy
+        env:
+          GOBIN: `go env GOPATH`/bin
         run: make generate-deepcopy
 
       - name: Linting
