--- a/.github/workflows/pre-build.yaml
+++ b/.github/workflows/pre-build.yaml
@@ -27,6 +27,7 @@ jobs:
         run: |
           export GOBIN=`go env GOPATH`/bin
           export PATH=${PATH}:`go env GOPATH`/bin
+          echo GOBIN=`go env GOPATH`/bin >> $GITHUB_ENV
 
       - name: Dependencies
         run: make all-dependencies
