--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -1,17 +1,20 @@
-name: Ppw image
+name: Ppw-operator dockerize app
 
 on:
   push:
-    branches: [dev]
+    branches: [main]
+    tags:
+      - v*
 
 env:
   IMAGE_NAME: ppw-operator
-  VERSION: latest
   IMAGE_REGISTRY: docker.pkg.github.com
   
 jobs:
   dockerize:
+    name: Dockerize ppw-operator
     runs-on: ubuntu-latest
+    #if: "!contains(github.event.head_commit.message, '[ci skip]')"
     steps:
       - uses: actions/checkout@v2
         
@@ -21,9 +24,14 @@ jobs:
       - name: Log into registry
         run: echo "${{ secrets.GITPKGS_PASSWORD }}" | docker login docker.pkg.github.com -u ${{ secrets.GITPKGS_USERNAME }} --password-stdin
 
-      - name: Push image
+      - name: Getting tag
         run: |
-          IMAGE_ID=$IMAGE_REGISTRY/${{ github.repository }}/$IMAGE_NAME
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
-          docker push $IMAGE_ID:$VERSION
+          echo "Lolich"
+          echo "GITHUBREF = ${{ github.ref }}"
+
+      # - name: Push image
+        # run: |
+        #   IMAGE_ID=$IMAGE_REGISTRY/${{ github.repository }}/$IMAGE_NAME
+        #   IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+        #   docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+        #   docker push $IMAGE_ID:$VERSION
