Workflow check [ci skip]

--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Getting tag
         run: |
-          echo "Lolich"
+          echo "Lolicha"
           echo "GITHUBREF = ${{ github.ref }}"
 
       # - name: Push image
