--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - name: Print kubecalster version
-        uses: actions-hub/kubectl@v1.17.9
-        env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-        with:
-          args: version
-          #args: apply -f https://k8s.io/examples/application/shell-demo.yaml
+      # - name: Print kubecalster version
+      #   uses: actions-hub/kubectl@v1.17.9
+      #   env:
+      #     KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+      #   with:
+      #     args: version
+      #     #args: apply -f https://k8s.io/examples/application/shell-demo.yaml
