--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -2,7 +2,7 @@ name: Ppw-operator dockerize app
 
 on:
   push:
-    branches: [dev]
+    branches: [main, release]
     tags: ['v*']
 
 
@@ -27,11 +27,10 @@ jobs:
       - name: Getting tag
         run: |
           IMAGE_ID=$IMAGE_REGISTRY/${{ github.repository }}/$IMAGE_NAME
-          echo IMAGEID=$IMAGE_ID
-          echo "GITHUBREF = ${{ github.ref }}"
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          [[ "$VERSION" == "main"]] && VERSION=latest
+          VERSION=latest
+          VER_REF=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VER_REF | sed -e 's/^v//')
+          echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
 
       # - name: Push image
