--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -23,6 +23,7 @@ jobs:
         run: |
           sudo apt update && sudo apt install build-essential
           export GOBIN=$GOPATH/bin
+          echo GOBIN=`go env GOPATH`/bin >> $GITHUB_ENV
 
       - name: Dependencies
         run: |
@@ -40,7 +41,7 @@ jobs:
     env:
       IMAGE_NAME: ppw-operator
       IMAGE_REGISTRY: docker.pkg.github.com
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: [build]
     if: "contains(github.event.head_commit.message, 'pkg')"
     steps:
