--- a/.github/workflows/cd-workflow.yaml
+++ b/.github/workflows/cd-workflow.yaml
@@ -1,4 +1,4 @@
-name: Publishing docker image
+name: CD Workflow
 
 on:
   pull_request:
@@ -46,7 +46,7 @@ jobs:
     needs: [build]
     if: "contains(github.event.head_commit.message, 'pkg')"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
 
       - name: Downloading artifact
         uses: actions/download-artifact@v2.0.6
@@ -73,3 +73,23 @@ jobs:
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
           docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-18.04
+    needs: [dockerize]
+    if: "!contains(github.event.head_commit.message, 'cd skip')"
+    steps:
+      - uses: actions/checkout@v2.3.4
+
+      - name: Kubectl deploy
+        run: |
+          echo "Deploy successful"
+
+      # - name: Print kubecalster version
+      #   uses: actions-hub/kubectl@v1.17.9
+      #   env:
+      #     KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+      #   with:
+      #     args: version
+      #     args: apply -f https://k8s.io/examples/application/shell-demo.yaml
