--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -6,9 +6,10 @@ on:
 
 env:
   IMG: ppw-operator
+  GOBIN: /bin
   
 jobs:
-  setup:
+  build:
     name: Setup enviroment
     runs-on: ubuntu-18.04
     if: "!contains(github.event.head_commit.message, 'ci skip')"
@@ -20,17 +21,14 @@ jobs:
         uses: actions/setup-go@v2.1.3
         with:
           go-version: ^1.15
-          
-      - name: Show Go env
-        run: |
-          go env
       
       - name: Set up gcc
-        run: sudo apt update && sudo apt install build-essential
+        run: sudo apt install build-essential
 
       - name: Set env vars
         run: |
           echo GOBIN=`go env GOPATH`/bin >> $GITHUB_ENV
+          GOBIN=$echo `go env GOPATH`/bin
 
       - name: Dependencies
         run: make all-dependencies
@@ -38,10 +36,43 @@ jobs:
       - name: Generate deepcopy
         run: make generate-deepcopy
 
+  test:
+    name: Test and linting
+    runs-on: ubuntu-18.04
+    needs: [setup]
+    steps:
+      - uses: actions/checkout@v2.3.4
+
+      - name: Set up Go 
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: ^1.15
+
+      - name: Setup env
+        run: |
+          sudo apt install build-essential
+      
       - name: Linting
         run: |
           make fmt
           make vet
+
+  generate:
+    name: Generate yamls
+    runs-on: ubuntu-18.04
+    needs: [setup]
+    steps:
+      - uses: actions/checkout@v2.3.4
+
+      - name: Set up Go 
+        uses: actions/setup-go@v2.1.3
+        with:
+          go-version: ^1.15
+
+      - name: Setup env
+        run: |
+         sudo apt install build-essential
+         make all-dependencies
 
       - name: Generate deploy yamls
         run: |
