--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Set env vars
         run: |
           echo GOBIN=`go env GOPATH`/bin >> $GITHUB_ENV
-          GOBIN=$echo `go env GOPATH`/bin
+          GOBIN=$(echo `go env GOPATH`/bin)
 
       - name: Dependencies
         run: make all-dependencies
