--- a/.github/workflows/ci-workflow.yaml
+++ b/.github/workflows/ci-workflow.yaml
@@ -6,7 +6,6 @@ on:
 
 env:
   IMG: ppw-operator
-  GOBIN: /bin
   
 jobs:
   build:
@@ -21,14 +20,9 @@ jobs:
         uses: actions/setup-go@v2.1.3
         with:
           go-version: ^1.15
-      
-      - name: Set up gcc
-        run: sudo apt install build-essential
 
       - name: Set env vars
-        run: |
-          echo GOBIN=`go env GOPATH`/bin >> $GITHUB_ENV
-          GOBIN=$(echo `go env GOPATH`/bin)
+        run: echo GOBIN=`go env GOPATH`/bin >> $GITHUB_ENV
 
       - name: Dependencies
         run: make all-dependencies
@@ -48,9 +42,11 @@ jobs:
         with:
           go-version: ^1.15
 
-      - name: Setup env
-        run: |
-          sudo apt install build-essential
+      - name: Set env vars
+        run: echo GOBIN=`go env GOPATH`/bin >> $GITHUB_ENV
+
+      - name: Dependencies
+        run: make all-dependencies
       
       - name: Linting
         run: |
@@ -63,16 +59,17 @@ jobs:
     needs: [build]
     steps:
       - uses: actions/checkout@v2.3.4
-
+      
       - name: Set up Go 
         uses: actions/setup-go@v2.1.3
         with:
           go-version: ^1.15
 
-      - name: Setup env
-        run: |
-         sudo apt install build-essential
-         make all-dependencies
+      - name: Set env vars
+        run: echo GOBIN=`go env GOPATH`/bin >> $GITHUB_ENV
+
+      - name: Dependencies
+        run: make all-dependencies
 
       - name: Generate deploy yamls
         run: |
