--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -36,4 +36,6 @@ spec:
           requests:
             cpu: 100m
             memory: 20Mi
+      imagePullSecrets:
+        - name: github-pkg
       terminationGracePeriodSeconds: 10
