[ci skip] Add workflow to create imagePullSecret FIX1

--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -1,4 +1,4 @@
-name: CD on Main Workflow
+name: Create imagePullSecret for cluster in secret KUBE_CONFIG
 
 on:
   push:
@@ -14,13 +14,9 @@ jobs:
       - name: Log into registry
         run: echo "${{ secrets.GITPKGS_PASSWORD }}" | docker login docker.pkg.github.com -u ${{ secrets.GITPKGS_USERNAME }} --password-stdin
 
-      - name: Kubectl deploy
-        run: |
-          echo "Deploy successful"
-
-       - name: Print kubecalster version
-         uses: actions-hub/kubectl@v1.17.9
-         env:
-           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-         with:
-           args: apply -f https://k8s.io/examples/application/shell-demo.yaml
+      - name: Install secret from docker conf
+       uses: actions-hub/kubectl@v1.17.9
+       env:
+         KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+       with:
+         args: apply -f https://k8s.io/examples/application/shell-demo.yaml
