[ci skip] Add workflow to create imagePullSecret FIX3

--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -5,8 +5,8 @@ on:
     branches: [dev]
 
 jobs:
-  deploy:
-    name: Deploy
+  create:
+    name: Create secret
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2.3.4
@@ -15,7 +15,7 @@ jobs:
         run: echo "${{ secrets.GITPKGS_PASSWORD }}" | docker login docker.pkg.github.com -u ${{ secrets.GITPKGS_USERNAME }} --password-stdin
 
       - name: Install secret from docker conf
-        uses: actions-hub/kubectl@v1.17.9
+        uses: actions-hub/kubectl@v1.14.3
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
