--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -1,13 +1,12 @@
 name: Create imagePullSecret for cluster in secret KUBE_CONFIG
 
-on:
-  push:
-    branches: [dev]
+on: [push]
 
 jobs:
   create:
     name: Create secret
     runs-on: ubuntu-18.04
+    if: "contains(github.event.head_commit.message, 'create secret')"
     steps:
       - uses: actions/checkout@v2.3.4
 
@@ -15,8 +14,9 @@ jobs:
         run: echo "${{ secrets.GITPKGS_PASSWORD }}" | docker login docker.pkg.github.com -u ${{ secrets.GITPKGS_USERNAME }} --password-stdin
 
       - name: Install secret from docker conf
-        uses: actions-hub/kubectl@v1.14.3
+        uses: actions-hub/kubectl@v1.17.9-fix
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: apply -f https://k8s.io/examples/application/shell-demo.yaml
+          args: create secret generic github-pkg \
+            --from-file ~/.docker/config.json
