[create secret] [ci skip] Add workflow to create imagePullSecret FIX5

--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -18,5 +18,5 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: create secret generic github-pkg \
+          args: create secret github-pkg \
             --from-file ~/.docker/config.json
