--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -18,5 +18,4 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: create secret github-pkg \
-            --from-file ~/.docker/config.json
+          args: create secret generic github-pkg --from-file ~/.docker/config.json
