--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -10,12 +10,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - name: Log into registry
-        run: echo "${{ secrets.GITPKGS_PASSWORD }}" | docker login docker.pkg.github.com -u ${{ secrets.GITPKGS_USERNAME }} --password-stdin
+      - name: Login to GitHub Packages Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ secrets.GITPKGS_USERNAME }}
+          password: ${{ secrets.GITPKGS_PASSWORD }}
+
+      - run: cat $HOME/.docker/config.json
 
       - name: Install secret from docker conf
         uses: actions-hub/kubectl@v1.17.9-fix
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: create secret generic github-pkg --from-file /home/runner/.docker/config.json
+          args:  create secret docker-registry regcred --docker-server=docker.pkg.github.com --docker-username=${{ secrets.GITPKGS_USERNAME }} --docker-password=${{ secrets.GITPKGS_PASSWORD }}
