--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -24,4 +24,4 @@ jobs:
         env:
           KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
         with:
-          args:  create secret docker-registry regcred --docker-server=docker.pkg.github.com --docker-username=${{ secrets.GITPKGS_USERNAME }} --docker-password=${{ secrets.GITPKGS_PASSWORD }}
+          args:  create secret docker-registry github-pkg --docker-server=docker.pkg.github.com --docker-username=${{ secrets.GITPKGS_USERNAME }} --docker-password=${{ secrets.GITPKGS_PASSWORD }}
