[ci skip] Try GKE2

--- a/.github/workflows/gke_example.yaml
+++ b/.github/workflows/gke_example.yaml
@@ -29,7 +29,7 @@ jobs:
           gcloud --quiet auth configure-docker
       # Get the GKE credentials so we can deploy to the cluster
       - run: |-
-          gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GCE_ZONE }}
 
       - name: Deploy
         run: |-
