--- a/.github/workflows/cd-workflow.yaml
+++ b/.github/workflows/cd-workflow.yaml
@@ -54,8 +54,12 @@ jobs:
       - name: Build image
         run: docker build . -f Dockerfile -t $IMAGE_NAME
 
-      - name: Log into registry
-        run: echo "${{ secrets.GITPKGS_PASSWORD }}" | docker login docker.pkg.github.com -u ${{ secrets.GITPKGS_USERNAME }} --password-stdin
+      - name: Login to GitHub Packages Docker Registry
+        uses: docker/login-action@v1
+        with:
+          registry: docker.pkg.github.com
+          username: ${{ secrets.GITPKGS_USERNAME }}
+          password: ${{ secrets.GITPKGS_PASSWORD }}
 
       - name: Getting tag
         run: |
