--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -10,18 +10,21 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - name: Login to GitHub Packages Docker Registry
-        uses: docker/login-action@v1
+      # Setup gcloud CLI
+      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          registry: docker.pkg.github.com
-          username: ${{ secrets.GITPKGS_USERNAME }}
-          password: ${{ secrets.GITPKGS_PASSWORD }}
+          version: '290.0.1'
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
+          project_id: ${{ secrets.GKE_PROJECT }}
 
-      - run: cat $HOME/.docker/config.json
+      # Configure Docker to use the gcloud command-line tool as a credential
+      # helper for authentication
+      - run: |-
+          gcloud --quiet auth configure-docker
+      # Get the GKE credentials so we can deploy to the cluster
+      - run: |-
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GCE_ZONE }}
 
-      - name: Install secret from docker conf
-        uses: actions-hub/kubectl@v1.17.9-fix
-        env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-        with:
-          args:  create secret docker-registry github-pkg --docker-server=docker.pkg.github.com --docker-username=${{ secrets.GITPKGS_USERNAME }} --docker-password=${{ secrets.GITPKGS_PASSWORD }}
+      - name: Deploy
+        run: |-
+          kubectl create secret docker-registry github-pkg --docker-server=docker.pkg.github.com --docker-username=${{ secrets.GITPKGS_USERNAME }} --docker-password=${{ secrets.GITPKGS_PASSWORD }}
