--- a/.github/workflows/cd-workflow.yaml
+++ b/.github/workflows/cd-workflow.yaml
@@ -83,14 +83,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
+      # Setup gcloud CLI
+      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '290.0.1'
+          service_account_key: ${{ secrets.GKE_SA_KEY }}
+          project_id: ${{ secrets.GKE_PROJECT }}
+
+      # Configure Docker to use the gcloud command-line tool as a credential
+      # helper for authentication
+      - run: |-
+          gcloud --quiet auth configure-docker
+      # Get the GKE credentials so we can deploy to the cluster
+      - run: |-
+          gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GCE_ZONE }}
+
       - name: Kubectl deploy
         run: |
-          echo "Deploy successful"
-
-      # - name: Print kubecalster version
-      #   uses: actions-hub/kubectl@v1.17.9
-      #   env:
-      #     KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
-      #   with:
-      #     args: version
-      #     args: apply -f https://k8s.io/examples/application/shell-demo.yaml
+          kubectl apply -f ./deploy/crd.yaml
+          kubectl apply -f ./deploy/controller.yaml
