--- a/.github/workflows/cd-workflow.yaml
+++ b/.github/workflows/cd-workflow.yaml
@@ -2,10 +2,34 @@ name: CD on Main Workflow
 
 on: [push]
 
+env: 
+  IMAGE_ID: ''
+  IMAGE_NAME: ppw-operator
+  IMAGE_REGISTRY: docker.pkg.github.com
+  VERSION: latest
+
 jobs:
+  tagging:
+    name: Image ID creating
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2.3.4
+
+      - name: Getting tag
+        run: |
+          VER_REF=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VER_REF | sed -e 's/^v//')
+          echo VERSION=$VERSION
+
+      - name: Push image
+        run: |
+          IMAGE_ID=$IMAGE_REGISTRY/${{ github.repository }}/$IMAGE_NAME
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
   build:
     name: Generate dependencies
     runs-on: ubuntu-18.04
+    if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: actions/checkout@v2.3.4
 
@@ -45,10 +69,6 @@ jobs:
     
   dockerize:
     name: Dockerize ppw-operator
-    env:
-      IMAGE_NAME: ppw-operator
-      IMAGE_REGISTRY: docker.pkg.github.com
-      VERSION: latest
     runs-on: ubuntu-18.04
     needs: [build]
     if: "!contains(github.event.head_commit.message, 'pkg')"
@@ -73,7 +93,6 @@ jobs:
 
       - name: Getting tag
         run: |
-          ls pkg/
           VER_REF=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VER_REF | sed -e 's/^v//')
           echo VERSION=$VERSION
