Hot fix [ci skip]

--- a/.github/workflows/cd-workflow.yaml
+++ b/.github/workflows/cd-workflow.yaml
@@ -25,6 +25,7 @@ jobs:
         run: |
           IMAGE_ID=$IMAGE_REGISTRY/${{ github.repository }}/$IMAGE_NAME
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          echo $IMAGE_ID
 
   build:
     name: Generate dependencies
