[create secret] Fix secret2

--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -27,4 +27,4 @@ jobs:
 
       - name: Deploy
         run: |-
-          kubectl create secret docker-registry github-pkg --docker-server=docker.pkg.github.com/safronovd/ppw-operator --docker-username=${{ secrets.GITPKGS_USERNAME }} --docker-password=${{ secrets.GITPKGS_PASSWORD }}
+          kubectl create secret docker-registry github-pkg2 --docker-server=docker.pkg.github.com/safronovd/ppw-operator --docker-username=${{ secrets.GITPKGS_USERNAME }} --docker-password=${{ secrets.GITPKGS_PASSWORD }}
