Added version tag

--- a/.github/workflows/cd-workflow.yaml
+++ b/.github/workflows/cd-workflow.yaml
@@ -5,7 +5,7 @@ on:
     branches: [dev]
 
   pull_request:
-    branches: [main, release]
+    branches: [main, release, test]
     tags: [v*]
   
 
