Custom resource as server dep

--- a/.github/workflows/create_k8s_secret.yaml
+++ b/.github/workflows/create_k8s_secret.yaml
@@ -25,6 +25,8 @@ jobs:
       - run: |-
           gcloud container clusters get-credentials ${{ secrets.GKE_CLUSTER }} --zone ${{ secrets.GCE_ZONE }}
 
-      - name: Deploy
+      - name: Install secret
         run: |-
-          kubectl create secret docker-registry github-pkg2 --docker-server=docker.pkg.github.com/safronovd/ppw-operator --docker-username=${{ secrets.GITPKGS_USERNAME }} --docker-password=${{ secrets.GITPKGS_PASSWORD }}
+          AUTH=`echo -n ${{ secrets.GITPKGS_USERNAME }}:${{ secrets.GITPKGS_PASSWORD }} | base64`
+          echo '{"auths":{"docker.pkg.github.com":{"auth":$AUTH}}}' | kubectl create secret generic github-pkg --type=kubernetes.io/dockerconfigjson --from-file=.dockerconfigjson=/dev/stdin --namespace ppw-operator-system
+          echo '{"auths":{"docker.pkg.github.com":{"auth":$AUTH}}}' | kubectl create secret generic github-pkg --type=kubernetes.io/dockerconfigjson --from-file=.dockerconfigjson=/dev/stdin
