--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: dxd360/ppw-operator
-  newTag: 0.0.3
+  newName: docker.pkg.github.com/safronovd/ppw-operator/ppw-operator
+  newTag: latest
