Configurating controller behavior

--- a/config/samples/apps_v1alpha0_ppw.yaml
+++ b/config/samples/apps_v1alpha0_ppw.yaml
@@ -1,9 +1,34 @@
 apiVersion: apps.ppw.example.com/v1alpha0
 kind: Ppw
 metadata:
-  name: ppw-sample
+  name: ppw
+  namespace: ppw
 spec:
   server:
+    name: ppw-server
+    label: ppw-server
     size: 2
     image: docker.pkg.github.com/safronovd/python-pravega-writer/ppw-server:latest
     imagePullSecret: github-pkg
+  processor:
+    name: ppw-processor
+    label: ppw-processor
+    size: 2
+    volumeClaimName: data-claim
+    image: docker.pkg.github.com/safronovd/python-pravega-writer/ppw-processor:latest
+    imagePullSecret: github-pkg
+    volumeMountPath: usr/src/app/data
+  controller:
+    name: ppw-ml-connector-job
+    lifetime: 100
+    volumeClaimName: data-claim
+    image: docker.pkg.github.com/safronovd/python-pravega-writer/ppw-ml-controller:latest
+    imagePullSecret: github-pkg
+    volumeMountPath: /usr/src/app/data
+  dataVolume:
+    name: data-claim
+    size: 1Gi
+    storageClassName: nfs
+  service:
+    name: ppw-server
+    label: ppw-server
