Enable ci by github actions

--- a/.github/workflows/cd-workflow.yaml
+++ b/.github/workflows/cd-workflow.yaml
@@ -2,7 +2,7 @@ name: Deployment Google Cloud
 
 on:
   push:
-    branches: [main, dev]
+    branches: [master, dev]
     tags: [v*]
 
   pull_request:
